# discovery-syn-data

./: .gitmodules  README-sosafe.md  README-synthflow.md  pyproject.toml
docs/: 0-plan.md  1-sosafe.md  2-synthflow.md  3-sosafe-walkthrough.md  3-synthflow-walkthrough.md  4-data-requirements-gap.md
graph/: account_ACC-0001.html  account_ACC-0042.html  churn.html  landscape.html  sosafe_naive_rag_index.pkl  synthflow_naive_rag_index.pkl
src/: __init__.py  build_graph.py  db.py  evaluate.py  generate_sosafe.py  generate_synthflow.py  generate_unstructured.py  inspect_graph.py  llm.py  naive_rag.py  retrieval.py
